Fixed the sidebar display on mobile devices

--- a/src/wwwroot/css/photos.css
+++ b/src/wwwroot/css/photos.css
@@ -52,6 +52,7 @@
 body.has-sidebar .sidebar{
     width: var(--sidebar-width);
     transition: width var(--sidebar-width-transition-time) ease-in-out;
+    z-index: 1;
 }
 
 .photo-thumbnails {
